*** 19990904_1 by lusky
major fixes to dbuf code (th)
bumped patchlevel to b103


*** 19990902_1 by lusky
added check for '#' in username and hostname of /quote kline


*** 19990831_1 by lusky
bumped patchlevel to b102
left over aconf->user gets freed twice, causing some malloc packages to leave their lunch all over the disk.... NULL things after every free (db)


*** 19990829_1 by lusky
fix for umode +O (jk)


*** 19990826_1 by lusky
turned on ANTI_DRONE_FLOOD by default
sync'd config.h.dist
include class.h in m_message.c
bumped patchlevel to b101


*** 19990825_2 by lusky
changed a strncpy to DupString in s_conf.c (db)


*** 19990825_1 by lusky
bumped patchlevel.h to b100
more kill path fixes (db)
m_oper fix for local oper flags (db)
ReadMessageFile stat fix (db)
cleanup of tools/Makefile.in (jl)


*** 19990819_1 by lusky
call release_client_dns_reply for servers too (th)
fixes for U and X lines (db)
Hide path on kill from "victim" (db)
Hide path on kill from oper to non opers (db)


*** 19990818_2 by khuon
Mental note: 

	Always make sure to check in from the directory where you actually
	got things working.



*** 19990818_1 by db
- backed out a change. You can't strcpy to a pointer without
  allocating memory. 



*** 19990817_2 by khuon
Ugh!  Seems sendto_prefix_one() accepts different args now.


*** 19990817_1 by lusky
fixed LIMIT_UH and IDLE_CHECK which were using old structs
revved patchlevel to b99


*** 19990816_1 by lusky
removed redundant "New highest connections" server notice
fixed SYSLOG_USERS bug (th)
discard broken DNS replies (th)
fixed IP mismatch check (th)
revved patchlevel to b98


*** 19990814_1 by lusky
small bug in packet.c in the byte counting code (th)


*** 19990812_1 by lusky
revved patchlevel to b97
ip hash function fix (th)


*** 19990811_1 by lusky
fake direction bug fix to send.c (th)
throttle accept errors in listener.c
oper motd rehash bug fix from perly
ensure that SERVER must come before SVINFO (jl)